--- a/docker-flask-template/nginx/conf.d/default.conf
+++ b/docker-flask-template/nginx/conf.d/default.conf
@@ -42,22 +42,9 @@ server {
     #    deny  all;
     #}
 
-   # location /test/ {
-   #    # Define the location of the proxy server to send the request to
-   #    proxy_pass http://<your machine private IP>:5001/;
-
-   #    # Redefine the header fields that NGINX sends to the upstream server
-   #    proxy_set_header Host $host;
-   #    proxy_set_header X-Real-IP $remote_addr;
-   #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-   #    # Define the maximum file size on file uploads
-   #    client_max_body_size 3G;
-   #}
-
-    location /linked_with_docker/ {
+    location /test/ {
        # Define the location of the proxy server to send the request to
-       proxy_pass http://flask_test:5000/;
+       proxy_pass http://192.168.1.151:5001/;
 
        # Redefine the header fields that NGINX sends to the upstream server
        proxy_set_header Host $host;
@@ -66,7 +53,20 @@ server {
 
        # Define the maximum file size on file uploads
        client_max_body_size 3G;
-    }
+   }
+
+   # location /linked_with_docker/ {
+   #    # Define the location of the proxy server to send the request to
+   #    proxy_pass http://flask_test:5000/;
+
+   #    # Redefine the header fields that NGINX sends to the upstream server
+   #    proxy_set_header Host $host;
+   #    proxy_set_header X-Real-IP $remote_addr;
+   #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+   #    # Define the maximum file size on file uploads
+   #    client_max_body_size 3G;
+   # }
 
 }
 
