nginx to node http-server

--- a/simple-html-page-server/Dockerfile
+++ b/simple-html-page-server/Dockerfile
@@ -1,2 +1,7 @@
-FROM nginx:1.15.12-alpine
-COPY html /usr/share/nginx/html
+FROM node:14.2.0-alpine3.10
+
+RUN npm install http-server -g
+COPY html /html
+
+WORKDIR /html
+CMD http-server -p 8000 --cors
